sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/Sanergy_Department_Unit__c.object-meta.xml
<CustomObject>
    <description>Sanergy Department Unit</description>
    <label>Sanergy Department Unit</label>
    <nameField>
        <label>Sanergy Department Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sanergy Department Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>