sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Department Unit Status</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>