sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sanergy_Department_Units</relationshipName>
    <type>Lookup</type>
</CustomField>