sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/fields/Department_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Unit_Code__c</fullName>
    <formula>Sanergy_Department__r.Department_Code__c  &amp; &#39;-&#39; &amp;  Unit_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Unit Code</label>
    <type>Text</type>
</CustomField>