sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/fields/Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Sanergy Department Units</relationshipLabel>
    <relationshipName>Sanergy_Department_Units</relationshipName>
    <type>Lookup</type>
</CustomField>