sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/fields/Sanergy_Department__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Department__c</fullName>
    <description>Sanergy Department</description>
    <label>Sanergy Department</label>
    <referenceTo>Sanergy_Department__c</referenceTo>
    <relationshipLabel>Sanergy Department Units</relationshipLabel>
    <relationshipName>Sanergy_Department_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>