sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/fields/Talent_Partner__c.field-meta.xml
<CustomField>
    <fullName>Talent_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent Partner SF Account</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sanergy_Department_Units1</relationshipName>
    <type>Lookup</type>
</CustomField>