sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/fields/Talent_Partner_Emp_Account__c.field-meta.xml
<CustomField>
    <fullName>Talent_Partner_Emp_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent Partner Emp Account</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Sanergy Department Units (Talent Partner Emp Account)</relationshipLabel>
    <relationshipName>Sanergy_Department_Units1</relationshipName>
    <type>Lookup</type>
</CustomField>