sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead (Employee A/c)</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Sanergy Department Units (Team Lead (Employee A/c))</relationshipLabel>
    <relationshipName>Sanergy_Department_Units2</relationshipName>
    <type>Lookup</type>
</CustomField>