sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/fields/Team_Lead_SF_Account__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_SF_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead SF Account</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sanergy_Department_Units2</relationshipName>
    <type>Lookup</type>
</CustomField>