sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <label>Unit Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>