sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/validationRules/Approver_LM_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_LM_Validation</fullName>
    <active>true</active>
    <description>Approver SF Account should be the same as LM User Account</description>
    <errorConditionFormula>Approver__c &lt;&gt;  Line_Manager_SF_Account__c</errorConditionFormula>
    <errorDisplayField>Approver__c</errorDisplayField>
    <errorMessage>Approver Account should be the same as the Dept Unit Line Manager Account</errorMessage>
</ValidationRule>