sfSandBoxCode/force-app/main/default/objects/Sanergy_Department_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sanergy_Department__c</columns>
    <columns>Line_Manager__c</columns>
    <columns>Approver__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>